--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 	<!-- Here we include bootstrap. This will be made available to all of the generated HTML/JS that React generates-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous" />
 	<script src="https://use.fontawesome.com/17282e1ba1.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Slabo+27px" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Heebo|Righteous" rel="stylesheet"/>
 	<link rel="stylesheet" href="css/style.css" />
 
 </head>
